# RunServerMagic

./: .gitignore  README.md  deploy.bat  pyproject.toml
example/: runserver.ipynb  runserver_fastapi.ipynb
runserver/: __init__.py  runserver.py  serverrunner.py
